[workspace]
resolver = "3"
members = ["nodes-common", "nodes-observability"]

[workspace.package]
edition = "2024"
rust-version = "1.90"
homepage = "https://taceo.io/"
repository = "https://github.com/TaceoLabs/nodes-helpers"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
alloy = { version = "1.6", default-features = false }
axum = "0.8"
backon = { version = "1.6", default-features = false }
eyre = "0.6"
git-version = "0.3"
humantime = "2.2"
humantime-serde = "1.1.1"
metrics = "0.24.2"
metrics-exporter-dogstatsd = "0.9"
metrics-exporter-prometheus = "0.17"
metrics-exporter-statsd = "0.9"
secrecy = "0.10"
serde = { version = "1", default-features = false }
sqlx = { version = "0.8", default-features = false }
telemetry-batteries = "0.1.2"
thiserror = "2"
tokio = { version = "1" }
tokio-util = "0.7"
tower = { version = "0.5" }
tower-http = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"

# This profile can be used for CI in pull requests.
[profile.ci-dev]
inherits = "dev"
opt-level = 1
debug = true
incremental = false

[profile.profiling]
inherits = "bench"
debug = true
lto = "thin"
