[workspace]
resolver = "3"
members = ["nodes-common"]

[workspace.package]
edition = "2024"
rust-version = "1.90"
homepage = "https://taceo.io/"
repository = "https://github.com/TaceoLabs/nodes-helpers"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
alloy = { version = "2", default-features = false }
axum = { version = "0.8", default-features = false }
axum-test = "20"
backon = { version = "1.6", default-features = false }
eyre = "0.6"
futures = "0.3"
git-version = "0.3"
headers = "0.4"
humantime-serde = "1.1.1"
reqwest = { version = "0.12", default-features = false }
reserve-port = "2"
secrecy = "0.10"
serde = { version = "1", default-features = false }
sqlx = { version = "0.8", default-features = false }
testcontainers-modules = { version = "0.15", default-features = false }
thiserror = "2"
tokio = { version = "1" }
tokio-util = "0.7"
tower = { version = "0.5", default-features = false }
tower-http = "0.6"
tracing = "0.1"

# This profile can be used for CI in pull requests.
[profile.ci-dev]
inherits = "dev"
opt-level = 1
debug = true
incremental = false

[profile.profiling]
inherits = "bench"
debug = true
lto = "thin"
