[package]
name = "taceo-nodes-common"
version = "0.6.0"
edition.workspace = true
rust-version.workspace = true
description = "Collection of common functions used by nodes in our MPC networks"
readme = "./README.md"
repository.workspace = true
license.workspace = true
publish = true

[dependencies]
alloy = { workspace = true, features = [
  "contract",
  "json-rpc",
  "provider-ws",
  "pubsub",
  "reqwest-rustls-tls",
  "rpc-types",
  "std"
], optional = true }
axum = { workspace = true, features = [
  "http1",
  "tokio",
  "tracing",
], optional = true }
backon = { workspace = true, features = ["std", "tokio-sleep"], optional = true }
futures = { workspace = true, optional = true }
git-version = { workspace = true }
humantime-serde = { workspace = true, optional = true }
secrecy = { workspace = true, features = ["serde"], optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
sqlx = { workspace = true, features = [
  "postgres",
  "runtime-tokio",
  "tls-rustls-aws-lc-rs"
], optional = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "signal", "time"] }
tokio-util = { workspace = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, features = ["set-header"], optional = true }
tracing.workspace = true

[dev-dependencies]
alloy = { workspace = true, features = [
  "contract",
  "json-rpc",
  "node-bindings",
  "reqwest-rustls-tls",
  "rpc-types-eth",
  "signer-local",
  "signers",
  "std"
] }
axum = { workspace = true, features = ["http1", "tokio", "tracing"] }
eyre.workspace = true
http-body = "1"

[features]
default = ["api", "postgres", "serde", "web3"]
api = ["dep:axum", "dep:tower-http"]
postgres = [
  "dep:backon",
  "dep:humantime-serde",
  "dep:secrecy",
  "dep:serde",
  "dep:sqlx"
]
serde = ["dep:serde"]
web3 = [
  "dep:alloy",
  "dep:backon",
  "dep:futures",
  "dep:humantime-serde",
  "dep:serde",
  "dep:tower"
]
