[package]
name = "taceo-nodes-common"
version = "0.8.1"
edition.workspace = true
rust-version.workspace = true
description = "Collection of common functions used by nodes in our MPC networks"
readme = "./README.md"
repository.workspace = true
license.workspace = true
publish = true

[package.metadata.docs.rs]
all-features = true

[package.metadata.cargo-all-features]
# We want to detect cases where we use deps or module from other features that are missing or not enabled
# so we set the max combination size to 1, to build each feature individually and not in combination with other features.
max_combination_size = 1

[dependencies]
alloy = { workspace = true, features = [
  "contract",
  "json-rpc",
  "provider-ws",
  "pubsub",
  "reqwest-rustls-tls",
  "rpc-types",
  "std"
], optional = true }
axum = { workspace = true, features = [
  "http1",
  "tokio",
  "tracing",
], optional = true }
axum-test = { workspace = true, optional = true }
backon = { workspace = true, features = ["std", "tokio-sleep"], optional = true }
eyre = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
git-version = { workspace = true }
headers = { workspace = true, optional = true }
humantime-serde = { workspace = true, optional = true }
reqwest = { workspace = true, features = ["default-tls", "json"], optional = true }
reserve-port = { workspace = true, optional = true }
secrecy = { workspace = true, features = ["serde"], optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
sqlx = { workspace = true, features = [
  "postgres",
  "runtime-tokio",
  "tls-rustls-aws-lc-rs"
], optional = true }
testcontainers-modules = { workspace = true, features = ["postgres"], optional = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "signal", "time"] }
tokio-util = { workspace = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, features = ["set-header"], optional = true }
tracing.workspace = true

[dev-dependencies]
alloy = { workspace = true, features = [
  "contract",
  "json-rpc",
  "node-bindings",
  "reqwest-rustls-tls",
  "rpc-types-eth",
  "signer-local",
  "signers",
  "std"
] }
axum = { workspace = true, features = ["http1", "tokio", "tracing"] }
axum-test = { workspace = true }
eyre.workspace = true
http-body = "1"

[features]
default = []
api = ["dep:axum", "dep:tower-http"]
middleware = []
postgres = [
  "dep:backon",
  "dep:humantime-serde",
  "dep:secrecy",
  "dep:serde",
  "dep:sqlx"
]
serde = ["dep:serde"]
signer-aws = ["alloy/signer-aws", "web3"]
signer-gcp = ["alloy/signer-gcp", "web3"]
signer-local = ["alloy/signer-local", "dep:secrecy", "web3"]
test-utils = [
  "dep:axum-test",
  "dep:eyre",
  "dep:reserve-port",
  "dep:testcontainers-modules",
  "postgres"
]
unkey = [
  "dep:axum",
  "dep:headers",
  "dep:reqwest",
  "dep:secrecy",
  "dep:serde",
  "dep:tower",
  "middleware"
]
web3 = [
  "dep:alloy",
  "dep:backon",
  "dep:futures",
  "dep:humantime-serde",
  "dep:serde",
  "dep:tower"
]
web3-asserter = ["alloy/providers", "web3"]
