[package]
name = "taceo-nodes-observability"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Setup helpers for metrics, logging and tracing for nodes in our MPC networks"
readme = "./README.md"
repository.workspace = true
license.workspace = true
publish = true

[dependencies]
eyre = "0.6"
humantime = "2.2"
metrics = "0.24.2"
metrics-exporter-dogstatsd = "0.9.6"
metrics-exporter-prometheus = "0.17.2"
metrics-exporter-statsd = "0.9.0"
secrecy = "0.10.3"
telemetry-batteries = { git = "https://github.com/worldcoin/telemetry-batteries.git", rev = "dc325a1df78867892066575866b6a805380f8237" }
tracing = "0.1"
tracing-subscriber = "0.3"
