[package]
name = "taceo-nodes-observability"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Setup helpers for metrics, logging and tracing for nodes in our MPC networks"
readme = "./README.md"
repository.workspace = true
license.workspace = true
publish = true

[dependencies]
eyre.workspace = true
humantime.workspace = true
metrics.workspace = true
metrics-exporter-dogstatsd.workspace = true
metrics-exporter-prometheus.workspace = true
metrics-exporter-statsd.workspace = true
secrecy.workspace = true
telemetry-batteries.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
