[package]
name = "taceo-nodes-observability"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
description = "Setup helpers for metrics, logging and tracing for nodes in our MPC networks"
readme = "./README.md"
repository.workspace = true
license.workspace = true
publish = true

[dependencies]
eyre.workspace = true
humantime = { workspace = true, optional = true }
metrics.workspace = true
metrics-exporter-dogstatsd = { workspace = true, optional = true }
metrics-exporter-prometheus = { workspace = true, optional = true }
metrics-exporter-statsd = { workspace = true, optional = true }
secrecy = { workspace = true, optional = true }
telemetry-batteries = { workspace = true, optional = true }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = [
  "env-filter",
  "fmt",
] }

[features]
default = [
  "datadog-tracing",
  "exporter-datadog",
  "exporter-statsd",
  "exporter-prometheus",
]
datadog-tracing = ["dep:telemetry-batteries"]
exporter-datadog = ["dep:metrics-exporter-dogstatsd"]
exporter-statsd = ["dep:metrics-exporter-statsd"]
exporter-prometheus = [
  "dep:metrics-exporter-prometheus",
  "dep:humantime",
  "dep:secrecy",
]
